...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/iAirToolBarStyle"/>

    <TextView
        android:id="@+id/UserSettingslabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:text="User Settings"
        android:textAlignment="textStart"
        android:textSize="24sp"
        android:textStyle="bold" />

    <android.support.v7.widget.CardView
        android:id="@+id/userSettingCardView"
...
                    android:layout_weight="0"
                    android:text="Username: "
                    android:textAllCaps="false"
                    android:textSize="18sp" />

                <ViewSwitcher
                    android:id="@+id/viewSwitcher"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0">

                    <TextView
                        android:id="@+id/textViewUserID"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:clickable="true"
                        android:drawableEnd="@drawable/icon_edit_user"
                        android:gravity="center_vertical"
                        android:text="TextView"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/editTextUserID"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:text="Name"
                        android:textSize="16sp" />
                </ViewSwitcher>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/SaveCancelBtnsLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:visibility="visible">

                <Button
                    android:id="@+id/btnSaveUsername"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Save" />

                <Button
                    android:id="@+id/btnCancelUsername"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Cancel" />
            </LinearLayout>

...
