...

        android:id="@+id/swiperefresh"
        android:layout_width="wrap_content"
        android:layout_height="?attr/actionBarSize">

        <android.support.v7.widget.Toolbar
            android:id="@+id/main_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="4dp"
            android:minHeight="56dp"
            android:theme="@style/iAirToolBarStyle"
            android:visibility="visible"
...

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/layoutInfoo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
...



            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutAQI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|fill_horizontal"
                android:gravity="center_horizontal|fill_horizontal"
                android:orientation="horizontal"
                android:paddingBottom="20dp"
...
