<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.bruno.iair.activities.CityListActivity">



    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/iAirToolBarStyle"
        app:popupTheme="@style/ThemeOverlay.AppCompat"/>

    <ListView
        android:id="@+id/cityList2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="48dp"
        tools:listitem="@layout/item_city" />

    <LinearLayout
        android:id="@+id/cityCountryListLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Spinner
            android:id="@+id/countrySpinner"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="16dp" />

        <ListView
            android:id="@+id/cityList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="48dp"
            tools:listitem="@layout/item_city" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom|left|center_horizontal"
        android:gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCurrentLocation"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/checkBoxFavGps"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_gps_locked"
            android:text="Current Location" />

        <CheckBox
            android:id="@+id/checkBoxFavGps"
            style="@android:style/Widget.CompoundButton.Star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>


</LinearLayout>
