<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/btnSearch"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="Search"

        android:visible="true"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/btnCity"
        android:icon="@drawable/ic_action_name"
        android:title="btnCity"
        app:showAsAction="always" />
</menu>
